# blueprintdata-cli

./: .dockerignore  .env.example  .eslintrc.cjs  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DETAILED_ROADMAP.md  Dockerfile  README.md  ROADMAP.md  TESTING_GUIDE.md  build-bun.ts  build.ts  bun.lockb  bunfig.toml  docker-compose.yml  package-lock.json  package.json  tsconfig.base.json  tsconfig.eslint.json  tsconfig.json  tsup.config.ts  vitest.config.ts
.changeset/: config.json
.husky/: pre-commit
blueprint-test/: README.md  pyproject.toml
blueprint-test/extraction/: meltano.yml
blueprint-test/extraction/scripts/: setup-local.sh
blueprint-test/transform/: dbt_project.yml  profiles.yml.example
blueprint-test/transform/scripts/: setup-local.sh
config/: llm-models.json
docs/: ANALYTICS_INIT.md  API.md  ARCHITECTURE.md  DEVELOPMENT.md  LOCAL_DEVELOPMENT.md  NPM_LINKING.md  PUBLISHING.md  TESTING_GUIDE.md  datawarehouse-profiler.md
scripts/: link-packages.sh  setup-npm-links.sh  (+3 more)
templates/lite-data-stack/: .gitignore  README.md  pyproject.toml
templates/lite-data-stack/.github/workflows/: cleanup-sandbox-datasets.yml  data-pipeline.yml  extract.yml  transform-deploy.yml  transform-pr-ci.yml  transform.yml
templates/lite-data-stack/extraction/: .gitignore  meltano.yml
templates/lite-data-stack/extraction/scripts/: setup-local.sh
templates/lite-data-stack/transform/: .gitignore  dbt_project.yml  profiles.yml.example
templates/lite-data-stack/transform/models/: example_model.sql
templates/lite-data-stack/transform/scripts/: setup-local.sh
(+133 files in other folders)
