[project]
name = "{{PROJECT_NAME}}-data-stack"
version = "1.0.0"
description = "Data extraction and transformation pipeline for {{PROJECT_NAME}}"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
extraction = [
    "meltano>=4.0.0",
]
transform = [
    "dbt-core>=1.9.0",
    "dbt-{{STORAGE_TYPE}}>=1.9.0",
    "sqlfluff>=3.0.0",
]
all = [
    "{{PROJECT_NAME}}-data-stack[extraction,transform]",
]
dev = [
    "{{PROJECT_NAME}}-data-stack[all]",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
